# libwidgetlords

./: .gitignore  LICENSE  Makefile  README  build_module.py  libwidgetlords.vapi  meson.build  meson_options.txt  package.sh  pi_spi.h  pi_spi_2ao.c  pi_spi_2ao.h  pi_spi_2ao_demo.c  pi_spi_8ai.h  pi_spi_8di.c  pi_spi_8ko.h  pi_spi_8ko_demo.c
debian/: README  changelog  control  copyright  libwidgetlords.install  postinst  postrm
include/: gpio.h  pi_spi.h  pi_spi_din.h  spi.h  widgetlords.h
overlays/: meson.build  overlay.sh  pi-spi-din-mio.dts  pi-spi.dts  vpe-2701c.dts  vpe-2901a.dts  vpe-3011b.dts
python/: meson.build  pi_spi.py  pi_spi_2ao_demo.py  pi_spi_8ai_demo.py  pi_spi_8di_demo.py  pi_spi_8ko_demo.py  pi_spi_din.py  pi_spi_din_4ao_demo.py  pi_spi_din_4ao_prog.py  pi_spi_din_4ko_demo.py  pi_spi_din_8ai_demo.py  pi_spi_din_8di_demo.py  vpe_2901a_demo.py  vpe_3011b_demo.py
python/demos/: pi_spi_2ao_demo.py  pi_spi_8ai_16b_demo.py  pi_spi_8ai_demo.py  pi_spi_8di_demo.py  pi_spi_8ko_demo.py  pi_spi_din_4ao_demo.py  pi_spi_din_4freq_demo.py  pi_spi_din_4ko_demo.py  pi_spi_din_8ai_demo.py  pi_spi_din_8di_demo.py  vpe_2901a_demo.py  vpe_3011b_demo.py
python/widgetlords/: __init__.py  pi_spi.py  pi_spi_din.py
src/: gpio.c  helpers.c  pi_spi.c  pi_spi_2ao.c  pi_spi_2ao_demo.c  pi_spi_8ai.c  pi_spi_8ai_16b.c  pi_spi_8ai_demo.c  pi_spi_8di.c  pi_spi_8di_demo.c  pi_spi_8ko.c  pi_spi_8ko_demo.c  pi_spi_din.c  pi_spi_din_4ao.c  pi_spi_din_4ao_demo.c  pi_spi_din_4freq.c  pi_spi_din_4ko.c  pi_spi_din_4ko_demo.c  pi_spi_din_8ai.c  pi_spi_din_8ai_10vdemo.c  pi_spi_din_8ai_mademo.c  pi_spi_din_8ai_thermdemo.c  pi_spi_din_8di.c  sdafe.c  spi.c  vpe_2901a.c  vpe_3011b.c
src/demos/: pi_spi_2ao_demo.c  pi_spi_4freq_demo.c  pi_spi_8ai_16b_demo.c  pi_spi_8ai_demo.c  pi_spi_8di_demo.c  pi_spi_8ko_demo.c  pi_spi_din_4ao_demo.c  pi_spi_din_4freq_demo.c  pi_spi_din_4ko_demo.c  pi_spi_din_8ai_10vdemo.c  pi_spi_din_8ai_demo.c  pi_spi_din_8ai_mademo.c  pi_spi_din_8ai_thermdemo.c  pi_spi_din_8di_demo.c  vpe_2901a_demo.c  vpe_3011b_demo.c
subprojects/pi_spi/: meson.build  pi_spi.c  pi_spi_2ao.c  pi_spi_2ao_demo.c  pi_spi_8ai.c  pi_spi_8ai_demo.c  pi_spi_8di.c  pi_spi_8di_demo.c  pi_spi_8ko.c  pi_spi_8ko_demo.c
subprojects/pi_spi/include/: pi_spi.h  pi_spi_8di.h
subprojects/pi_spi_din/: meson.build  pi_spi_din.c  pi_spi_din_4ao.c  pi_spi_din_4ao_demo.c  pi_spi_din_4ko.c  pi_spi_din_4ko_demo.c  pi_spi_din_8ai.c  pi_spi_din_8ai_demo.c  pi_spi_din_8di.c  pi_spi_din_8di_demo.c  sdafe.c  vpe_2901a_demo.c  vpe_3011b.c  vpe_3011b_demo.c
subprojects/pi_spi_din/include/: pi_spi_din.h
subprojects/spi/: meson.build  spi.c
subprojects/spi/include/: spi.h
